frontend/src/modals/Auth/Auth.scss
@import "../../colors.scss";

.auth {
  height: 100vh;
  width: 100vw;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 20;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  label {
    text-indent: 10px;
    margin-top: 15px;
  }

  input {
    height: 25px;

    &:focus {
      outline: none;
    }

    &:invalid {
      border: 0.1rem solid red;
      border-radius: 0.3rem;
      box-shadow: inset 0 0 2px $carbon;
    }
  }

  span {
    color: red;
  }

  hr {
    border: solid 0.1rem $dark-purple-3;
    width: 100%;
    margin: 10% 0;
  }

  &_content {
    padding: 0.5rem;
    height: 80%;
    width: 80%;
    border-radius: 0.3rem;
    box-shadow: 0 0 1rem $carbon;
    background-color: $dark-purple-7;
    color: $carbon;
    display: flex;
    flex-direction: column;
    align-content: flex-start;
    // justify-content: space-between;
    // align-items: center;

    &_close {
      display: flex;
      justify-content: end;

      &_button {
        height: 25px;
        border: solid 1.5px $dark-purple-1;
        background-color: $dark-purple-3;
        border-radius: 0.2rem;
        box-shadow: 0 0 5px $carbon;
      }
    }

    &_form {
      display: flex;
      flex-direction: column;
      height: 100%;
      padding: 0 2rem;
      justify-content: center;

      * {
        margin-top: 5px;
      }

      &_single {
        display: flex;
        flex-direction: column;

        &_submit {
          height: 25px;
          width: 60%;
          margin: 20px auto 0 auto;
          box-shadow: 0 0 5px $carbon;
          border: solid 1.5px $dark-purple-1;
          background-color: $dark-purple-3;
          border-radius: 7px;
        }
      }
    }

    &_logout {
      padding: 0.5rem;
      height: 15%;
      width: 60%;
      border-radius: 0.3rem;
      box-shadow: 0 0 1rem $carbon;
      background-color: $dark-purple-7;
      color: $carbon;
      display: flex;
      flex-direction: column;
      justify-content: start;
      align-content: center;

      &_submit {
        height: 25px;
        width: 60%;
        margin: 20px auto 0 auto;
        box-shadow: 0 0 5px $carbon;
        border: solid 1.5px $dark-purple-1;
        background-color: $dark-purple-3;
        border-radius: 7px;
      }
    }
  }
}

.message {
  position: fixed;
  top: 0;
  left: 0;

  &_show {
    visibility: hidden;
    height: 100vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;

    @keyframes disappear {
      0% {
        opacity: 1;
        visibility: visible;
      }

      70% {
        opacity: 1;
        visibility: visible;
      }

      100% {
        opacity: 0;
        visibility: hidden;
      }
    }

    animation-duration: 1.5s;
    animation-name: disappear;

    div {
      background-color: $carbon;
      color: $cool-grey-1;
      padding: 0.5rem;
      border-radius: 0.5rem;
    }
  }

  &_hide {
    visibility: hidden;
  }
}

